maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if ((aMurNord(x,y) aMurOuest(x,y) && aMurEst(x,y)) || (aMurNord(x,y) aMurSud(x,y) && aMurEst(x,y)) || (aMurNord(x,y) aMurOuest(x,y) && aMurSud(x,y)) || (aMurSud(x,y) aMurOuest(x,y) && aMurEst(x,y))){
  ^