maze.shortestpath.ShortestPathMaze.scala.code
def ecritPos(x:Int,y:Int,a:Int):Boolean{
  
  if ((aMurNord(x,y) aMurOuest(x,y) && aMurEst(x,y)) || (aMurNord(x,y) aMurSud(x,y) && aMurEst(x,y)) || (aMurNord(x,y) aMurOuest(x,y) && aMurSud(x,y)) || (aMurSud(x,y) aMurOuest(x,y) && aMurEst(x,y))){
    setIndication(x,y)
  	return true
  }
  
  else {
    setIndication(x,y)
    if (!aMurNord(x,y)){
      
      ecritPos(x,y-1,a+1)
    }
       
    if (!aMurEst(x,y)){
      
      ecritPos(x+1,y,a+1)
    }
    
    if (!aMurOuest(x,y)){
      
      ecritPos(x-1,y,a+1)
    }
    
    if (!aMurSud(x,y)){
      
      ecritPos(x,y+1,a+1)
    }    
    
  }
  
}



override def run() {
    // Your code here
  var x = getMondeLargeur() -1
  var y = getMondeHauteur() -1
  var xo = 0
  var yo = 0
  
  for (i<- 0 to x){
    for (j<-0 to y){
      if (aBiscuit(i,j)){
        xo = i
        yo = j
      }
    }
  }
  setIndication(xo,yo,0)
  
  
}